[package]
name = "catchssebyrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest-eventsource = "0.4.0"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
futures = "0.3.21"
serde_json = "1.0.79"